Make DMS iDempiere-6.2 compatibale.